2010-06-16  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/HP-Photosmart_D5460.xml:
	  New entries added to the MySQL database.

2010-06-15  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_1020.xml, printer/Samsung-CLP-310.xml,
	  opt/207.xml, opt/208.xml, opt/209.xml, opt/211.xml, opt/212.xml,
	  opt/213.xml, opt/214.xml, opt/215.xml, opt/216.xml, opt/217.xml,
	  opt/218.xml, opt/219.xml, opt/220.xml, opt/221.xml, opt/222.xml,
	  opt/223.xml, opt/224.xml, opt/225.xml, opt/226.xml, opt/227.xml,
	  opt/228.xml, opt/3.xml, opt/42.xml, opt/43.xml, opt/44.xml,
	  opt/45.xml, opt/46.xml, opt/47.xml, opt/48.xml, opt/49.xml,
	  opt/5.xml, opt/50.xml, opt/51.xml, opt/54.xml, opt/55.xml,
	  opt/56.xml, opt/57.xml, opt/58.xml, opt/6.xml, opt/60.xml,
	  opt/61.xml, opt/62.xml, opt/63.xml, opt/64.xml, opt/65.xml,
	  opt/66.xml, opt/67.xml, opt/68.xml, opt/69.xml, opt/7.xml,
	  opt/70.xml, opt/71.xml, opt/72.xml, opt/73.xml, opt/74.xml,
	  opt/75.xml, opt/76.xml, opt/77.xml, opt/78.xml, opt/79.xml,
	  opt/8.xml, opt/80.xml, opt/81.xml, opt/82.xml, opt/83.xml,
	  opt/84.xml, opt/85.xml, opt/86.xml, opt/87.xml, opt/88.xml,
	  opt/89.xml, opt/9.xml, opt/90.xml, opt/91.xml, opt/92.xml,
	  opt/93.xml, opt/94.xml, opt/95.xml, opt/96.xml, opt/97.xml,
	  opt/98.xml, opt/99.xml, opt/Brother-MediaType.xml,
	  opt/GS-HalftoningAlgorithm-Gray.xml, opt/Minolta-PCL600.xml,
	  opt/PCL-4-5-InputSlot.xml, opt/PCL-XL-InputSlot.xml,
	  opt/PJL-Duplex.xml, opt/PJL-PJLBinding.xml, opt/PJL-PJLDuplex.xml,
	  opt/PageSize-A4only.xml, opt/Postscript-Duplex.xml,
	  opt/Postscript-InputSlot.xml, opt/Postscript-PageSize.xml,
	  opt/Postscript-Resolution.xml,
	  opt/Postscript-largeformat-PageSize.xml,
	  opt/Postscript1-Resolution.xml, opt/bj8XXYYZ-Resolution.xml,
	  opt/bjc250gs-BlueGamma.xml, opt/bjc250gs-ColorMode.xml,
	  opt/bjc250gs-ComposeK.xml, opt/bjc250gs-Compress.xml,
	  opt/bjc250gs-GreenGamma.xml, opt/bjc250gs-Inverse.xml,