@@ -1,38 +1,0 @@
-<printer id="printer/Epson-TX525FW_Series">
-  <make>Epson</make>
-  <model>TX525FW Series</model>
-  <mechanism>
-    <inkjet />
-    <color />
-    <resolution>
-      <dpi>
-        <x>5760</x>
-        <y>1440</y>
-      </dpi>
-    </resolution>
-  </mechanism>
-  <url>http://www.epson.com/</url>
-  <autodetect>
-    <general>
-      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;MDL:Epson Stylus Office TX525FW;CLS:PRINTER;DES:EPSON Epson Stylus Office TX525FW</ieee1284>
-      <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
-      <description>EPSON Epson Stylus Office TX525FW</description>
-      <manufacturer>EPSON</manufacturer>
-      <model>Epson Stylus Office TX525FW</model>
-    </general>
-  </autodetect>
-  <functionality>A</functionality>
-  <driver>epson-workforce-525</driver>
-  <drivers>
-    <driver>
-      <id>epson-workforce-525</id>
-    </driver>
-  </drivers>
-  <comments>
-    <en>
-      All-in-One color inkjet printer.&lt;p&gt;
-      Maximum paper width: 21.0 cm / 8.3 inches&lt;p&gt;
-
-    </en>
-  </comments>
-</printer>
