@@ -1,3 +1,12 @@
+2010-06-18  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Epson-ME_620F_Series.xml,
+	  printer/Epson-N10_N11_Series.xml, printer/Epson-TX320F_Series.xml,
+	  printer/Epson-TX320_WorkForce320_Series.xml,
+	  printer/Epson-TX525FW_Series.xml,
+	  printer/Epson-WorkForce_320_Series.xml: Removed printers which
+	  are not yet released onm Epson's request.
+
 2010-06-16  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/printer/HP-Photosmart_D5460.xml:
